--- a/source/_posts/生活在孤独中前行.md
+++ b/source/_posts/生活在孤独中前行.md
@@ -1,11 +1,11 @@
 ---
 title: 生活在孤独中前行
 date: 2018-03-26 16:08:08
+categories: 自省
+tags: 鸡汤
 ---
->
->  生活不可能像你想象的那么好,但也不会像你想象的那么糟.我觉得人的脆弱和坚强都超乎自己的想象. 有时,我可能脆弱的一句话就泪流满面,有时,也发现自己咬着牙走了很长的路.
->
 
+> 生活不可能像你想象的那么好,但也不会像你想象的那么糟.我觉得人的脆弱和坚强都超乎自己的想象. 有时,我可能脆弱的一句话就泪流满面,有时,也发现自己咬着牙走了很长的路.
 
 >  以这一句话开始，是因为看了高木直子的《一个人住第五年》。都说人是慢慢成长的，其实不是，人是瞬间长大的，就像是突然间沉淀一般，突然不会谈恋爱了或者说不想谈恋爱了，一个人生活单一却也不会觉得无聊，即便很多时候还是会迷茫却也不会觉得烦躁了。去年的今天我在不一样的城市，背着不一样的书包，留着不一样的发型，走着不一样的路，想着不一样的事情，有着不一样的心思，谁说改变要十年呢。或者说，这一秒的想法和上一秒的想法就不一样，这个世界是瞬间变化的，运转速度是那么快，没有人在意你是不是一个人。而我呢，就是一个人，默默地在做自己的事，感受着生活中的变化，也感受着自己的变化，在不断的变化中，寻找最佳的结合点和平衡点。信奉一句话：变化中求生存。专注和节奏是生活的主旋律。
 > 
